welcome.lessons.welcome.array.island.Island.scala.error
island:3: error: '=' expected but ';' found.
  for (i<-0 to num.length-1){
^